fixtures/fake-ingress-v1beta1-with-annotation.yaml
# fake client resource are a bit special
# apiVersion need to match versions we're collection, i.e. apps/v1
# true version is taken from kubectl.kubernetes.io/last-applied-configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"test-ingress","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"test","servicePort":80},"path":"/testpath"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2020-09-04T21:17:46Z"
  finalizers:
  - networking.gke.io/ingress-finalizer
  generation: 1
  name: test-ingress
  namespace: default
  resourceVersion: "676987"
  selfLink: /apis/networking.k8s.io/v1/namespaces/default/ingresses/test-ingress
  uid: eefa4af8-cde3-4dc5-b1a4-0f6008d67273
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: test
          servicePort: 80
        path: /testpath
status:
  loadBalancer: {}
